@@ -3,5 +3,5 @@
     - Enabling sites would provide adapter that returns desired subtype interface
     - Use INavigationRoot to find microsites?
 * Move containing_organization index / metadata from nd.content to resonate
-* Move portlet from nd.content to resonate
 * Check if local role adapters can be moved to nd.content
+* Handle problems gracefully when adding the "Syndication status" portlet to a folder
