@@ -1,0 +1,21 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:plone="http://namespaces.plone.org/plone"
+    i18n_domain="resonate">
+  <!-- Ensure Plone's portlets ZCML has already been processed; without
+       this, we may get a permission lookup error
+  -->
+    <include package="plone.app.portlets" />
+    <!-- -*- extra stuff goes here -*- -->
+
+    <plone:portlet
+        name="resonate.portlets.SyndicationStatusPortlet"
+        interface=".syndicationstatus.ISyndicationStatusPortlet"
+        assignment=".syndicationstatus.Assignment"
+        view_permission="cmf.ReviewPortalContent"
+        edit_permission="cmf.ManagePortal"
+        renderer=".syndicationstatus.Renderer"
+        addview=".syndicationstatus.AddForm"
+        />
+
+</configure>
